--- a/vcastplay-player/src/app/components/playlist-preview/playlist-preview.component.html
+++ b/vcastplay-player/src/app/components/playlist-preview/playlist-preview.component.html
@@ -1,76 +1,4 @@
-<div #mainPlayer class="relative flex flex-1 items-center justify-center w-full h-full aspect-video overflow-hidden">
-    <!-- <ng-container *ngIf="currentItem() as item">
-        <div
-            #viewport
-            class="relative w-full h-full flex items-center justify-center transition-all ease-in-out"
-            [ngClass]="onActiveTransitionClass()"
-            style="--animation-duration: {{ playlist.transition.speed / 10 }}s"
-            *ngIf="isPlaying()"
-        >
-            @switch(item.type) {
-                @case ('image') {
-                    <img class="absolute left-0 top-0 h-full w-full object-fit" [src]="item.link" [alt]="item.name" (load)="onImageLoaded(item)">
-                }
-                @case('video') {
-                    <video class="absolute left-0 top-0 h-full w-full object-fill" [src]="item.link" [autoplay]="isAutoPlay" [playsInline]="true" (ended)="onNextItem()"></video>
-                }
-                @case ('web') {
-                    <iframe class="w-full h-full object-fit" [src]="item.link | safeurl" frameborder="0" (load)="onImageLoaded(item)"
-                        allow="autoplay; encrypted-media; compute-pressure; picture-in-picture" scrolling="no" ></iframe>
-                }
-                @case ('youtube') {
-                    <div #ytPlayer class="absolute left-0 top-0 h-full w-full"></div>
-                }
-                @case ('facebook') {                    
-                    <div #fbPlayer class="relative flex items-center justify-center h-full w-full overflow-hidden">
-                        @if (isFacebookLoading()) { 
-                            <div class="absolute left-0 top-0 w-full h-full flex items-center justify-center">
-                                <p-progress-spinner strokeWidth="2" fill="transparent" />
-                            </div>
-                         }
-                        <div
-                            class="fb-video w-full h-full pointer-events-none"
-                            [attr.data-href]="item.link"
-                            data-autoplay="true"
-                            data-show-text="false"
-                            data-controls="false"
-                            data-allowfullscreen="false"
-                            data-show-captions="false"
-                        ></div>
-                    </div>
-                }
-                @case ('design') {
-                    <app-design-layout-preview [viewport]="viewport" [designLayout]="item" [isPlaying]="isPlaying()" (onCanvasChange)="onImageLoaded(item)" />
-                }
-            }
-        </div>
-    </ng-container>
-
-    <div class="hidden">
-        <ng-container *ngIf="nextPreloadedItem() as item">
-            @switch(item.type) {
-                @case ('image') {
-                    <img [src]="item.link" [alt]="item.name">
-                }
-                @case('video') {
-                    <video [src]="item.link" preload="auto" [muted]="true"></video>
-                }
-                @case ('web') {
-                    <iframe [src]="item.link | safeurl"></iframe>
-                }
-                @case ('youtube') {
-                    <div #ytPlayer class="absolute left-0 top-0 h-full w-full"></div>
-                }
-                @case ('facebook') {
-                    <div class="fb-video" [attr.data-href]="item.link"></div>
-                }
-                @case ('design') {
-                    <app-design-layout-preview [viewport]="mainPlayer" [designLayout]="item" />
-                }
-            }
-        </ng-container>
-    </div> -->
-    
+<div #mainPlayer class="relative flex flex-1 items-center justify-center w-full h-full aspect-video overflow-hidden">    
     @for (item of playlist.contents; track trackById($index, item)) {
         <div
             #viewport
@@ -81,11 +9,19 @@
 
             @switch(item.type) {
                 @case ('image') {
-                    <img #image [id]="item.contentId" class="h-full w-full object-fit inset-0" [alt]="item.name">
+                    <img #image [id]="item.contentId" class="h-full w-full object-fit inset-0" loading="lazy"
+                        (error)="onMediaError(item)" [alt]="item.name">
                 }
                 @case('video') {
-                    <video #video [id]="item.contentId" class="h-full w-full object-fill"
-                        [autoplay]="true" [playsInline]="true" (ended)="onNextItem()"></video>
+                    <video #video [id]="item.contentId" class="h-full w-full object-fill" preload="metadata"
+                        [autoplay]="true" [playsInline]="true" (ended)="onNextItem()" (error)="onMediaError(item)"></video>
+                }
+                @case ('audio') {
+                    <div class="relative h-full w-full flex items-center justify-center gap-4">
+                        <li class="!text-9xl !text-white pi pi-volume-up"></li>
+                        <audio [id]="item.contentId" class="absolute left-0 top-0 h-full w-full" controlsList="nodownload noplaybackrate"
+                            [controls]="false" [autoplay]="true" [crossOrigin]="true" preload="auto" (error)="onMediaError(item)" (ended)="onNextItem()"></audio>
+                    </div>
                 }
                 @case ('web') {
                     <iframe #iframe [id]="item.contentId" [src]="onIFrameLoad(item) | safeurl" class="w-full h-full object-fit" frameborder="0"
@@ -111,6 +47,8 @@
                                 data-controls="false"
                                 data-allowfullscreen="false"
                                 data-show-captions="false"
+                                data-muted="false"
+                                data-lazy="true"
                             ></div>
                         </div>
                     </ng-container>
@@ -123,12 +61,3 @@
         </div>
     }
 </div>
-
-<ng-container *ngIf="!isAutoPlay">
-    <div class="absolute top-0 left-0 w-full h-full flex items-center justify-center opacity-0 group-hover:opacity-100 z-60">
-        <div class="h-20 w-20 border-4 border-[var(--p-surface-200)] rounded-full opacity-70 flex items-center justify-center 
-            hover:opacity-100 cursor-pointer" (click)="onClickPlayback()" [pTooltip]="isPlaying() ? 'Pause' : 'Play'" tooltipPosition="bottom">
-            <i class="text-[var(--p-surface-200)] !text-2xl pi" [ngClass]="{ 'pi-pause': isPlaying(), 'pi-play': !isPlaying() }"></i>
-        </div>
-    </div>
-</ng-container>
