--- a/vcastplay-cms/src/app/components/audience-tag-filters/audience-tag-filters.component.html
+++ b/vcastplay-cms/src/app/components/audience-tag-filters/audience-tag-filters.component.html
@@ -1,4 +1,4 @@
-<div class="flex flex-col gap-8 mt-2" [formGroup]="audienceTagInputForm">
+<div class="relative flex flex-col gap-5 h-full" [formGroup]="audienceTagInputForm">
     <div class="grid grid-cols-1 md:grid-cols-12 gap-2 items-center">
         <div class="col-span-1 md:col-span-5">
             <p-floatlabel variant="on">
@@ -16,33 +16,35 @@
             <p-button label="Add" icon="pi pi-plus" (onClick)="onClickAddTag()" size="small" fluid />
         </div>
     </div>
-    <p-table [value]="audienceTags" [scrollable]="true" scrollHeight="180px" size="small" stripedRows showGridlines>
-        <ng-template #header>
-            <tr>
-                <th>Tags</th>
-                <th>Values</th>
-                <th style="width: 12%;">
-                    <div class="text-center">Actions</div>
-                </th>
-            </tr>
-        </ng-template>
-        <ng-template #body let-item>
-            <tr>
-                <td>{{ item.category }}</td>
-                <td>{{ item.name }}</td>
-                <td>
-                    <div class="flex flex-row justify-center">
-                        <p-button icon="pi pi-trash" (onClick)="onClickRemoveTag(item)" severity="danger" text />
-                    </div>
-                </td>
-            </tr>
-        </ng-template>
-        <ng-template #emptymessage>
-            <tr>
-                <td colspan="3">
-                    <div class="flex justify-center items-center h-50">No audience tags found.</div>
-                </td>
-            </tr>
-        </ng-template>
-    </p-table>
+    <div class="flex-1 min-h-[180px] overflow-y-auto">
+        <p-table [value]="audienceTags" [scrollable]="true" scrollHeight="flex" size="small" stripedRows showGridlines>
+            <ng-template #header>
+                <tr>
+                    <th>Tags</th>
+                    <th>Values</th>
+                    <th style="width: 12%;">
+                        <div class="text-center">Actions</div>
+                    </th>
+                </tr>
+            </ng-template>
+            <ng-template #body let-item>
+                <tr>
+                    <td>{{ item.category }}</td>
+                    <td>{{ item.name }}</td>
+                    <td>
+                        <div class="flex flex-row justify-center">
+                            <p-button icon="pi pi-trash" (onClick)="onClickRemoveTag(item)" severity="danger" text />
+                        </div>
+                    </td>
+                </tr>
+            </ng-template>
+            <ng-template #emptymessage>
+                <tr>
+                    <td colspan="3">
+                        <div class="flex justify-center items-center h-50">No audience tags found.</div>
+                    </td>
+                </tr>
+            </ng-template>
+        </p-table>
+    </div>
 </div>
