--- a/vcastplay-cms/src/app/features/assets/asset-preview/asset-preview.component.html
+++ b/vcastplay-cms/src/app/features/assets/asset-preview/asset-preview.component.html
@@ -1,9 +1,11 @@
 @switch (asset.type) {
     @case ('image') {
-        <img class="absolute left-0 top-0 h-full w-full object-fit" [src]="asset.link" [alt]="asset.name">
+        <img class="absolute left-0 top-0 h-full w-full object-fit" loading="lazy" [src]="asset.link" [alt]="asset.name">
     }
     @case('video') {
-        <video class="absolute left-0 top-0 h-full w-full object-contain" [src]="asset.link" [controls]="showControls" [playsInline]="true" [autoplay]="autoPlay"></video>
+        <video class="absolute left-0 top-0 h-full w-full object-contain" preload="metadata"
+            controlsList="nodownload noplaybackrate nofullscreen" oncontextmenu="return false"
+            [src]="asset.link" [controls]="showControls" [playsInline]="true" [autoplay]="autoPlay"></video>
     }
     @case ('web') {
         <iframe class="w-full h-full object-fit" [src]="asset.link | safeurl" frameborder="0"
