--- a/vcastplay-cms/src/app/features/reports/reports.component.html
+++ b/vcastplay-cms/src/app/features/reports/reports.component.html
@@ -1,6 +1,10 @@
 <div class="flex flex-col gap-1 h-full">
     <app-breadcrumbs [menu]="pageInfo"></app-breadcrumbs>
     <p-card styleClass="h-full" class="flex-1">
-
+        <ng-template #header>
+            <div class="mt-4 px-6">
+                <p class="text-2xl font-semibold">{{ pageInfo[0].label }}</p>
+            </div>
+        </ng-template>
     </p-card>
 </div>
