--- a/vcastplay-cms/src/app/features/screen-management/screen-controls/screen-controls.component.html
+++ b/vcastplay-cms/src/app/features/screen-management/screen-controls/screen-controls.component.html
@@ -1,4 +1,4 @@
-<div class="grid grid-cols-1 md:grid-cols-2 lg:grid-cols-12 gap-5 border border-zinc-200 rounded-lg p-3 items-center overflow-hidden">
+<div class="grid grid-cols-1 md:grid-cols-2 lg:grid-cols-12 gap-6 border border-zinc-200 rounded-lg px-3 py-6 md:p-3 items-center overflow-hidden">
     <div class="col-span-1 md:col-span-6 flex">
         <div class="flex gap-3 items-center w-full" [formGroup]="selectedContentForm">
             <p-inputgroup>
