--- a/vcastplay-cms/src/app/features/screen-management/screen-management-list/screen-management-list.component.html
+++ b/vcastplay-cms/src/app/features/screen-management/screen-management-list/screen-management-list.component.html
@@ -1,180 +1,249 @@
 <div class="flex flex-col gap-1 h-full">
-    <app-breadcrumbs [menu]="pageInfo"></app-breadcrumbs>
-    <div class="flex-1">
-        <p-card styleClass="h-full">
-            <ng-template #title>
-                <div class="flex gap-4 items-center mb-2">
-                    <app-screen-filter class="w-full md:w-[25rem]" (filterChange)="onFilterChange($event)" [showLocation]="true" [showScreenStatus]="true" />
+  <app-breadcrumbs [menu]="pageInfo"></app-breadcrumbs>
+  <div class="flex-1">
+    <p-card styleClass="h-full">
+      <ng-template #header>
+        <div class="mt-4 px-6">
+          <p class="text-2xl font-semibold">{{ pageInfo[0].label }}</p>
+        </div>
+      </ng-template>
+      <ng-template #title>
+        <div class="flex gap-4 items-center mb-2">
+          <app-screen-filter
+            class="w-full md:w-[25rem]"
+            (filterChange)="onFilterChange($event)"
+            [showLocation]="true"
+            [showScreenStatus]="true"
+          />
+        </div>
+      </ng-template>
+      <div class="flex-1 md:h-full">
+        <p-table
+          class="hidden lg:block"
+          [value]="screenService.loadingSignal() ? utils.tableSkeletonRows : filteredScreen()"
+          selectionMode="multiple"
+          [(selection)]="selectMultipleScreens"
+          [scrollable]="true"
+          size="small"
+          dataKey="id"
+          stripedRows
+        >
+          <ng-template #header>
+            <tr>
+              <th style="width: 2rem"><p-tableHeaderCheckbox /></th>
+              <th style="width: 5rem">Status</th>
+              <th>Name</th>
+              <th>Display</th>
+              <th>Content</th>
+              <th>Response</th>
+              <th>Last Update</th>
+              <th>Last Screenshot</th>
+              <th>
+                <div class="text-center">Actions</div>
+              </th>
+            </tr>
+          </ng-template>
+          <ng-template #body let-item>
+            <tr class="text-sm" [pSelectableRow]="item">
+              <td><p-tableCheckbox [value]="item" /></td>
+              <td>
+                <p-tag
+                  [value]="item?.screenStatus?.toUpperCase()"
+                  [icon]="'pi ' + utils.getIcon(item?.screenStatus ?? '')"
+                  [severity]="utils.getStatus(item?.screenStatus ?? '')"
+                />
+              </td>
+              <td>
+                <div class="flex items-center gap-4">
+                  <div
+                    class="flex items-center"
+                    [pTooltip]="utils.toTitleCase(item.type)"
+                    tooltipPosition="bottom"
+                  >
+                    @switch (item.type) { @case('desktop') {
+                    <i class="pi pi-desktop !font-black !text-2xl !text-blue-500"></i> }
+                    @case('android') { <i class="pi pi-android !text-2xl !text-lime-500"></i> }
+                    @default { <i class="pi pi-globe !text-2xl"></i> } }
+                  </div>
+                  <p class="font-semibold">{{ item.name }}</p>
                 </div>
-            </ng-template>
-            <div class="flex-1 md:h-full">
-                <p-table
-                    class="hidden lg:block" 
-                    [value]="screenService.loadingSignal() ? utils.tableSkeletonRows : filteredScreen()" 
-                    selectionMode="multiple"
-                    [(selection)]="selectMultipleScreens"
-                    [scrollable]="true" 
-                    size="small"
-                    dataKey="id"
-                    stripedRows
-                >
-                    <ng-template #header>
-                        <tr>
-                            <th style="width: 2rem"><p-tableHeaderCheckbox /></th>
-                            <th style="width: 5rem;">Status</th>
-                            <th>Name</th>
-                            <th>Display</th>
-                            <th>Content</th>
-                            <th>Response</th>
-                            <th>Last Update</th>
-                            <th>Last Screenshot</th>
-                            <th>
-                                <div class="text-center">Actions</div>
-                            </th>
-                        </tr>
-                    </ng-template>
-                    <ng-template #body let-item>
-                        <tr class="text-sm" [pSelectableRow]="item">
-                            <td><p-tableCheckbox [value]="item" /></td>
-                            <td>
-                                <p-tag [value]="item?.screenStatus?.toUpperCase()" [icon]="'pi ' + utils.getIcon(item?.screenStatus ?? '')" 
-                                    [severity]="utils.getStatus(item?.screenStatus ?? '')" />
-                            </td>
-                            <td>
-                                <div class="flex items-center gap-4">
-                                    <div class="flex items-center" [pTooltip]="utils.toTitleCase(item.type)" tooltipPosition="bottom">
-                                        @switch (item.type) {
-                                            @case('desktop') { <i class="pi pi-desktop !font-black !text-2xl !text-blue-500"></i> }
-                                            @case('android') { <i class="pi pi-android !text-2xl !text-lime-500"></i> }
-                                            @default { <i class="pi pi-globe !text-2xl"></i> }
-                                        }
-                                    </div>
-                                    <p class="text-base font-semibold">{{ item.name }}</p>
-                                </div>
-                            </td>
-                            <td><p-tag [value]="item?.displayStatus?.toUpperCase()" [severity]="utils.getStatus(item?.displayStatus ?? '')" /></td>
-                            <td>
-                                <div class="flex gap-2">
-                                    @if (item?.content) {
-                                        <div class="flex flex-col">
-                                            <p>{{ item.content?.name }}</p>
-                                            <p>{{ utils.onGetLastUpdatedLabel(item.content?.updatedOn) }}</p>
-                                        </div>
-                                        <p-tag [value]="item?.content?.status?.toUpperCase()" [icon]="'pi ' + utils.getIcon(item.content?.status ?? '')" 
-                                            [severity]="utils.getStatus(item.content?.status  ?? '')" />
-                                    } @else {
-                                        <p class="italic">No Content</p>
-                                    }
-                                </div>
-                            </td>
-                            <td><p>{{ item.Response ?? '-' }}</p></td>
-                            <td><p>{{ utils.onGetLastUpdatedLabel(item.onlineOn) }}</p></td>
-                            <td><p>{{ utils.onGetLastUpdatedLabel(item.screenshotOn) }}</p></td>
-                            <td>
-                                <div class="flex flex-row justify-center gap-2">
-                                    <ng-container *ngTemplateOutlet="actionBtn; context: { $implicit: item }"></ng-container>
-                                </div> 
-                            </td>
-                        </tr>
-                    </ng-template>
-                    <ng-template #emptymessage>
-                        <tr>
-                            <td colspan="9" [height]="20">
-                                <div class="flex justify-center p-5"><p class="italic">No Data found</p></div>
-                            </td>
-                        </tr>
-                    </ng-template>
-                </p-table>
-                <div class="block lg:hidden flex flex-col gap-4">
-                    <div class="flex items-center gap-2">
-                        <p-checkbox inputId="all" [ngModel]="isAllChecked()" (onChange)="onClickCheckAll($event.checked)" binary />
-                        <label for="all">Select All</label>
-                    </div>
-                    @if (!screenService.loadingSignal()) {
-                        @for (item of filteredScreen(); track $index) {
-                            <app-screen-management-list-item [screen]="item" [actionBtn]="actionBtn" />
-                        } @empty {
-                            <div class="flex justify-center items-center p-5 h-100">
-                                <p>No playlists found</p>
-                            </div>
-                        }
-                    } @else {
-                        @for (item of utils.tableSkeletonRows; track $index) {
-                            <p-skeleton height="5rem" />
-                        }
-                    }
+              </td>
+              <td>
+                <p-tag
+                  [value]="item?.displayStatus?.toUpperCase()"
+                  [severity]="utils.getStatus(item?.displayStatus ?? '')"
+                />
+              </td>
+              <td>
+                <div class="flex gap-2">
+                  @if (item?.content) {
+                  <div class="flex flex-col">
+                    <p>{{ item.content?.name }}</p>
+                    <p>{{ utils.onGetLastUpdatedLabel(item.content?.updatedOn) }}</p>
+                  </div>
+                  <p-tag
+                    [value]="item?.content?.status?.toUpperCase()"
+                    [icon]="'pi ' + utils.getIcon(item.content?.status ?? '')"
+                    [severity]="utils.getStatus(item.content?.status ?? '')"
+                  />
+                  } @else {
+                  <p class="italic">No Content</p>
+                  }
                 </div>
+              </td>
+              <td>
+                <p>{{ item.Response ?? '-' }}</p>
+              </td>
+              <td>
+                <p>{{ utils.onGetLastUpdatedLabel(item.onlineOn) }}</p>
+              </td>
+              <td>
+                <p>{{ utils.onGetLastUpdatedLabel(item.screenshotOn) }}</p>
+              </td>
+              <td>
+                <div class="flex flex-row justify-center gap-2">
+                  <ng-container
+                    *ngTemplateOutlet="actionBtn; context: { $implicit: item }"
+                  ></ng-container>
+                </div>
+              </td>
+            </tr>
+          </ng-template>
+          <ng-template #emptymessage>
+            <tr>
+              <td colspan="9" [height]="20">
+                <div class="flex justify-center p-5"><p class="italic">No Data found</p></div>
+              </td>
+            </tr>
+          </ng-template>
+        </p-table>
+        <div class="block lg:hidden flex flex-col gap-4">
+          <div class="flex items-center gap-2">
+            <p-checkbox
+              inputId="all"
+              [ngModel]="isAllChecked()"
+              (onChange)="onClickCheckAll($event.checked)"
+              binary
+            />
+            <label for="all">Select All</label>
+          </div>
+          @if (!screenService.loadingSignal()) { @for (item of filteredScreen(); track $index) {
+          <app-screen-management-list-item [screen]="item" [actionBtn]="actionBtn" />
+          } @empty {
+          <div class="flex justify-center items-center p-5 h-100">
+            <p>No playlists found</p>
+          </div>
+          } } @else { @for (item of utils.tableSkeletonRows; track $index) {
+          <p-skeleton height="5rem" />
+          } }
+        </div>
+      </div>
+      <ng-template #footer>
+        <p-paginator [rows]="rows" [totalRecords]="totalRecords"></p-paginator>
+        <app-screen-controls />
+        <p-fieldset>
+          <ng-template #header>
+            <p class="text-sm font-semibold">Legends:</p>
+          </ng-template>
+          <div class="flex flex-col md:flex-row items-center justify-between gap-3 md:gap-6">
+            <div class="flex gap-4 items-center">
+              <div class="flex gap-1 items-center md:justify-center">
+                <p class="text-sm font-semibold">Playing:</p>
+                <p-badge severity="success" value="12" />
+              </div>
+              <div class="flex gap-1 items-center md:justify-center">
+                <p class="text-sm font-semibold">Disconnected:</p>
+                <p-badge severity="danger" value="8" />
+              </div>
+              <div class="flex gap-1 items-center md:justify-center">
+                <p class="text-sm font-semibold">StandBy:</p>
+                <p-badge severity="warn" value="10" />
+              </div>
             </div>
-            <ng-template #footer>
-                <p-paginator [rows]="rows" [totalRecords]="totalRecords"></p-paginator>
-                <app-screen-controls />
-                <p-fieldset>
-                    <ng-template #header>
-                        <p class="text-sm font-semibold">Legends:</p>
-                    </ng-template>
-                    <div class="flex flex-col md:flex-row items-center justify-between gap-3 md:gap-6">
-                        <div class="flex gap-4 items-center">
-                            <div class="flex gap-1 items-center md:justify-center">
-                                <p class="text-sm font-semibold">Playing:</p>
-                                <p-badge severity="success" value="12" />
-                            </div>
-                            <div class="flex gap-1 items-center md:justify-center">
-                                <p class="text-sm font-semibold">Disconnected:</p>
-                                <p-badge severity="danger" value="8" />
-                            </div>
-                            <div class="flex gap-1 items-center md:justify-center">
-                                <p class="text-sm font-semibold">StandBy:</p>
-                                <p-badge severity="warn" value="10" />
-                            </div>
-                        </div>
-                        <div class="md:ml-auto flex gap-6 items-center">
-                            <div class="flex gap-1 items-start md:justify-center">
-                                <p class="text-sm font-semibold">Approved:</p>
-                                <p-badge severity="success" value="22" />
-                            </div>
-                            <div class="flex gap-1 items-start md:justify-center">
-                                <p class="text-sm font-semibold">Disapproved:</p>
-                                <p-badge severity="danger" value="5" />
-                            </div>
-                        </div>
-                    </div> 
-                </p-fieldset>
-            </ng-template>
-        </p-card>
-    </div>
+            <div class="md:ml-auto flex gap-6 items-center">
+              <div class="flex gap-1 items-start md:justify-center">
+                <p class="text-sm font-semibold">Approved:</p>
+                <p-badge severity="success" value="22" />
+              </div>
+              <div class="flex gap-1 items-start md:justify-center">
+                <p class="text-sm font-semibold">Disapproved:</p>
+                <p-badge severity="danger" value="5" />
+              </div>
+            </div>
+          </div>
+        </p-fieldset>
+      </ng-template>
+    </p-card>
+  </div>
 </div>
 
 <ng-template #actionBtn let-item>
-    <p-button pTooltip="Screenshot" tooltipPosition="bottom" icon="pi pi-camera" severity="success" size="small" />
-    <p-button (onClick)="onClickOpenDetails(item)" pTooltip="Screen Information" tooltipPosition="bottom" icon="pi pi-info-circle" severity="contrast" size="small" />
+  <p-button
+    pTooltip="Screenshot"
+    tooltipPosition="bottom"
+    icon="pi pi-camera"
+    severity="success"
+    size="small"
+  />
+  <p-button
+    (onClick)="onClickOpenDetails(item)"
+    pTooltip="Screen Information"
+    tooltipPosition="bottom"
+    icon="pi pi-info-circle"
+    severity="contrast"
+    size="small"
+  />
 </ng-template>
 
-<p-dialog header="Broadcast Message" [(visible)]="showBroadcast" styleClass="w-[50rem] h-auto" (onHide)="onClickCloseDialog()" 
-    [resizable]="false" [modal]="true" [draggable]="false">
-    <app-screen-broadcast-message />
-    <ng-template #footer>
-        <p-button label="Close" severity="secondary" (onClick)="onClickCloseDialog()" />
-        <p-button label="Apply" severity="success" (onClick)="onClickApplyBroadcastMessage()" />
-    </ng-template>
+<p-dialog
+  header="Broadcast Message"
+  [(visible)]="showBroadcast"
+  styleClass="w-[50rem] h-auto"
+  (onHide)="onClickCloseDialog()"
+  [resizable]="false"
+  [modal]="true"
+  [draggable]="false"
+>
+  <app-screen-broadcast-message />
+  <ng-template #footer>
+    <p-button label="Close" severity="secondary" (onClick)="onClickCloseDialog()" />
+    <p-button label="Apply" severity="success" (onClick)="onClickApplyBroadcastMessage()" />
+  </ng-template>
 </p-dialog>
 
-<p-dialog header="Settings" [(visible)]="showSettings" styleClass="w-[50rem] h-auto" (onHide)="onClickCloseDialog()" 
-    [resizable]="false" [modal]="true" [draggable]="false">
-    <app-screen-settings />
-    <ng-template #footer>
-        <p-button label="Close" severity="secondary" (onClick)="onClickCloseDialog()" />
-        <p-button label="Apply" severity="success" (onClick)="onClickApplySettings()" />
-    </ng-template>
+<p-dialog
+  header="Settings"
+  [(visible)]="showSettings"
+  styleClass="w-[50rem] h-auto"
+  (onHide)="onClickCloseDialog()"
+  [resizable]="false"
+  [modal]="true"
+  [draggable]="false"
+>
+  <app-screen-settings />
+  <ng-template #footer>
+    <p-button label="Close" severity="secondary" (onClick)="onClickCloseDialog()" />
+    <p-button label="Apply" severity="success" (onClick)="onClickApplySettings()" />
+  </ng-template>
 </p-dialog>
 
-<p-drawer [(visible)]="showScreenDetails" header="Details" (onHide)="onClickCloseDialog()" position="right">
-    <app-screen-details [screen]="selectedScreen()" />
+<p-drawer
+  [(visible)]="showScreenDetails"
+  header="Details"
+  (onHide)="onClickCloseDialog()"
+  position="right"
+>
+  <app-screen-details [screen]="selectedScreen()" />
 
-    <ng-template #footer>
-        <div class="flex gap-3">
-            <p>Status:</p>
-            <p-tag class="ml-auto" [value]="selectedScreen()?.status?.toUpperCase()" [icon]="'pi ' + utils.getIcon(selectedScreen()?.status ?? '')" 
-                [severity]="utils.getStatus(selectedScreen()?.status  ?? '')" />
-        </div>
-    </ng-template>
+  <ng-template #footer>
+    <div class="flex gap-3">
+      <p>Status:</p>
+      <p-tag
+        class="ml-auto"
+        [value]="selectedScreen()?.status?.toUpperCase()"
+        [icon]="'pi ' + utils.getIcon(selectedScreen()?.status ?? '')"
+        [severity]="utils.getStatus(selectedScreen()?.status ?? '')"
+      />
+    </div>
+  </ng-template>
 </p-drawer>
