--- a/vcastplay-cms/src/app/features/settings/broadcast/broadcast-list/broadcast-list.component.html
+++ b/vcastplay-cms/src/app/features/settings/broadcast/broadcast-list/broadcast-list.component.html
@@ -1,6 +1,11 @@
 <div class="flex flex-col gap-1 h-full">
     <app-breadcrumbs [menu]="pageInfo"></app-breadcrumbs>
     <p-card styleClass="h-full" class="flex-1">
+        <ng-template #header>
+            <div class="mt-4 px-6">
+                <p class="text-2xl font-semibold">{{ pageInfo[0].label }}</p>
+            </div>
+        </ng-template>
         <ng-template #title>
             <div class="flex gap-2 items-center">
                 <app-filters class="w-full md:w-[25rem]" />
