--- a/vcastplay-player/src/app/components/asset-preview/asset-preview.component.html
+++ b/vcastplay-player/src/app/components/asset-preview/asset-preview.component.html
@@ -1,10 +1,10 @@
 @switch (asset.type) {
     @case ('image') {
-        <img #image class="absolute left-0 top-0 h-full w-full object-fit" [alt]="asset.name">
+        <img #image class="absolute left-0 top-0 h-full w-full object-fit" loading="lazy" [alt]="asset.name">
     }
     @case('video') {
-        <video #video class="absolute left-0 top-0 h-full w-full object-contain" [loop]="true" 
-            [controls]="false" [playsInline]="true" [autoplay]="true"></video>
+        <video #video class="absolute left-0 top-0 h-full w-full object-contain" [loop]="true" preload="metadata"
+            [controls]="false" [playsInline]="true" [autoplay]="autoPlay" [muted]="true"></video>
     }
     @case ('web') {
         <iframe #iframe class="w-full h-full object-fit" [src]="asset.link | safeurl" frameborder="0"
@@ -24,6 +24,13 @@
                 data-muted="true"
                 data-lazy="true"
             ></div>
+        </div>
+    }
+    @case ('audio') {
+        <div class="relative h-full w-full flex items-center justify-center gap-4">
+            <li class="!text-7xl !text-white pi pi-volume-up"></li>
+            <audio class="absolute left-0 top-0 h-full w-full" controlsList="nodownload noplaybackrate"
+                [controls]="showControls" [autoplay]="true" [crossOrigin]="true" preload="auto"></audio>
         </div>
     }
 }
