--- a/vcastplay-player/src/app/components/design-layout-preview/design-layout-preview.component.html
+++ b/vcastplay-player/src/app/components/design-layout-preview/design-layout-preview.component.html
@@ -1,4 +1,4 @@
-<div #canvasContainer class="relative origin-center flex items-center justify-center z-20 overflow-hidden">
+<div #canvasContainer class="relative origin-center flex items-center justify-center overflow-hidden">
     @for (layer of designLayout.htmlLayers; track trackById($index, layer)) {
         <div class="absolute pointer-events-none z-10 overflow-hidden flex items-center justify-center" [id]="layer.id" 
             [style]="{ top: layer.top + 'px', left: layer.left + 'px', width: layer.width + 'px', 
