--- a/vcastplay-cms/src/app/main/main.component.html
+++ b/vcastplay-cms/src/app/main/main.component.html
@@ -5,7 +5,7 @@
     <div
       class="main-content p-3 md:p-[1rem] bg-gray-200 dark:bg-black relative md:rounded-tl-[26px]"
     >
-      <div
+      <!-- <div
         *ngIf="showUpgrade()"
         class="py-2 transition duration-300 ease-in-out"
         [ngClass]="{ 'opacity-0': !showUpgrade(), 'opacity-100': showUpgrade() }"
@@ -37,7 +37,7 @@
             campaigns’ performance.
           </p>
         </p-card>
-      </div>
+      </div> -->
       <router-outlet />
     </div>
   </div>
